add section on column packings

--- a/notes/prep-for-final/final-summary.tex
+++ b/notes/prep-for-final/final-summary.tex
@@ -375,6 +375,60 @@ Learning objectives:
 	\item Mobile phase must be conductive AND isocratic, e.g., aqueous mobile phase ion chromatography or reversed-phase
 \end{itemize}
 
+\subsubsection{Evaporative Light-Scattering Detector (ELSD)}
+
+\begin{itemize}
+	\item column effluent nebulized into fine aerosol using air or \ce{N2} from nozzle
+	\item Mobile phase aerosol is evaporated in a heated drift tube
+	\item Fine particulates (the analytes) pass through a laser beam  scatter the laser light
+	\item Scattered light measured at perpendicular angle to flow
+	\item Detector response is about the same for all nonvolatile analytes
+	\item Detection limits more sensitive than refractive index detector
+	\item Buffers in mobile phase must be used with care, as they must volatilize to avoid major interference with signal
+\end{itemize}
+
+\subsection{Column Packings}
+
+There are two types:
+
+\begin{itemize}
+	\item Microporous HPLC column packings
+	\item Bonded phase HPLC packings
+\end{itemize}
+
+\subsubsection{Microporous HPLC Column Packings}
+
+\begin{itemize}
+	\item Microporous HPLC packings currently used for columns:
+	\begin{itemize}
+		\item small diameter (1.7, 1.8, 2, 3, 5, and 10 $\mu{}m$ $d_p$)
+		\item fully porous
+		\item silica-based
+	\end{itemize}
+	\item Characterized by:
+	\begin{itemize}
+		\item High efficiency: small diffusional distances, so both stationary and mobile phase mass-transfer terms improved
+		\item High sample capacity, given high surface area since packing material is fully porous
+		\item Surface is fully hydrolyzed silica (silica heated with 0.1 M \ce{HCl} for 1-2 days) with chemically reactive silanol groups
+	\end{itemize}
+\end{itemize}
+
+\subsubsection{Bonded Phase HPLC Packings}
+
+\begin{itemize}
+	\item Bonded-phase packings have microporous silica support to which a liquid phase is covalently bonded
+	\item No column bleed as with liquid-liquid columns
+	\item Stationary phase produced by silanization
+	\begin{itemize}
+		\item Choice of R determines functionality of stationary phase
+		\begin{itemize}
+			\item e.g., R = \ce{C18H37} (bulky reagent reacting with $<=50\%$ of surface silanol groups due to steric factors)
+		\end{itemize}
+		\item Many polar active sites left on surface which produce tailing problems in HPLC affecting performance
+		\item To reduce this effect, end-capping with less bulky reagent to react with most free silanol groups
+		\item A bulky i-butyl group can be used instead of a \ce{CH3} group to increase stability (e.g., acid-catalyzed hydrolysis)
+	\end{itemize}
+\end{itemize}
 
 \subsection{Types of Chromatography in HPLC}
 
