complete chemicals section

--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -66,12 +66,10 @@ The main objective of this experiment is to make a method that uses a SIM for qu
 \section{Chemicals, Methods and Instrumentation}
 
 \subsection{Chemicals}
-Old: Benzaldehyde (Sigma Aldrich, Lot: 41696 PKV), nitrobenzene (Alfa Aesar, Lot: A06V040, 99\%, CAS: 98-95-3), methanol (HPLC grade, Caledon, Lot: 103267, CAS: 108-90-7), salicylamide (Sigma Aldrich, Lot: S51885-279, CAS: 65-45-2), phenacetin (Sigma Aldrich, Lot 78C-0014), acetominophen (Sigma Aldrich, Lot: 32F-0073), caffeine (Sigma Aldrich, Lot: 0316B4), and an unknown pharmaceutical mixture was used in this experiment.
-
-New: In the first week, something. In the second week, more of something. Finally, in the last week, the last of something.
+In the first week, BDE-47, PBB-77 and `2-\ce{HCH}, all of each were at a concentration of \SI{50}{\mu{}g/mL} in isooctane, were used as standard solutions. In the second week, fish oil (Exact Norwegian Cod Liver Oil), dichloromethane (emd, Lot 5Q160, CAS: 75-09-2) and PBB-77, at a concentration of \SI{10}{\mu{}g/mL} in isooctane, were used as chemicals. Finally, in the last week, BDE-47, PBB-77 and `2-\ce{HCH}, each at a concentration of \SI{10}{\mu{}g/mL} in isooctane, were used. Throughout the entirety of the experiment, hexane (Caledon Laboratory Chemicals, CAS no. 110-54-3, LOT: 89001) and isooctane (OmniSolv, CAS: 540-84-1, LOT: 52054) were used.
 
 \subsection{Instrumentation}
-The separation and analysis of the entire experiment was performed on an Agilent 7890A GC, coupled with a 5975C inert XL EIICI MSD with a triple exis detector. The dimensions of the column used was $30m \times 0.250mm \times 0.25\mu{}m$, by Agilent Technologies. The stationary phase was (5\%-Phenyl)-methylpolysiloxane. Each analysis was performed with the injection mode at splitless, with \ce{He} as the carrier gas, and the flow rate was set at \SI{1}{mL/min}. Do I need to state the pressure and volume?
+The separation and analysis of the entire experiment was performed on an Agilent 7890A GC, coupled with a 5975C inert XL EI/CI MSD with a triple axis detector. The dimensions of the column used was $30m \times 0.250mm \times 0.25\mu{}m$, by Agilent Technologies. The stationary phase was (5\%-Phenyl)-methylpolysiloxane. Each analysis was performed with the injection mode at splitless, with \ce{He} as the carrier gas, and the flow rate was set at \SI{1}{mL/min}. Do I need to state the pressure and volume and splitless?
 
 \subsection{Methods}
 
@@ -90,13 +88,13 @@ Table \ref{tab-para} shows some cool stuff.
 	\hfill \\
 	\begin{tabular}{|c|c|c|}
 		\hline
-		Compound & Ions Monitored (m/z) & Time window (min) \\
+		Compound & Ions monitored (m/z) & Time window (min) \\
 		\hline
-		`2-HCH & 180.9, 218.9, 181, 219 & 0.5 - 19 \\
+		`2-HCH & 181, 219 & 0.5 - 19 \\
 		\hline
 		BDE-47 & 326, 486 & 19 - 22.5 \\
 		\hline
-		PBB-77 & 470, 310 & 22.5 - 24 or 34 \\
+		PBB-77 & 470, 310 & 22.5 - 24 \\
 		\hline
 	\end{tabular}
 	\label{tab-para}
