add table of amu

--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -80,7 +80,7 @@ The separation and analysis of the entire experiment was performed on an Agilent
 \section{Results and Discussion}
 
 \subsection{Results}
-Table \ref{tab-para} shows some cool stuff.
+Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the molecular weight of BDE-47, PBB-77 and `2-\ce{HCH}.
 
 \begin{table}[h!]
 	\centering
@@ -90,7 +90,7 @@ Table \ref{tab-para} shows some cool stuff.
 		\hline
 		Compound & Ions monitored (m/z) & Time window (min) \\
 		\hline
-		`2-HCH & 181, 219 & 0.5 - 19 \\
+		`2-\ce{HCH} & 181, 219 & 0.5 - 19 \\
 		\hline
 		BDE-47 & 326, 486 & 19 - 22.5 \\
 		\hline
@@ -100,6 +100,23 @@ Table \ref{tab-para} shows some cool stuff.
 	\label{tab-para}
 \end{table}
 
+\begin{table}[h!]
+	\centering
+	\caption{Molecular weight of BDE-47, PBB-77 and `2-HCH}
+	\hfill \\
+	\begin{tabular}{|c|c|}
+		\hline
+		Compound & Molecular weight (amu) \\
+		\hline
+		BDE-47 & 486 \\
+		\hline
+		PBB-77 & 470 \\
+		\hline
+		`2-\ce{HCH} & 291 \\
+		\hline
+	\end{tabular}
+	\label{tab-mass}
+\end{table}
 
 \subsection{Discussion}
 
