add table of fish oil

--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -80,7 +80,7 @@ The separation and analysis of the entire experiment was performed on an Agilent
 \section{Results and Discussion}
 
 \subsection{Results}
-Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the molecular weight of BDE-47, PBB-77 and `2-\ce{HCH}.
+Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the molecular weight of BDE-47, PBB-77 and `2-\ce{HCH}. Table \ref{tab-fish} shows the mass of fish oil that was weighed out for the experiment.
 
 \begin{table}[h!]
 	\centering
@@ -106,7 +106,7 @@ Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the m
 	\hfill \\
 	\begin{tabular}{|c|c|}
 		\hline
-		Compound & Molecular weight (amu) \\
+		Compound & Molecular weight (\si{\amu}) \\
 		\hline
 		BDE-47 & 486 \\
 		\hline
@@ -117,6 +117,23 @@ Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the m
 	\end{tabular}
 	\label{tab-mass}
 \end{table}
+
+\begin{table}[h!]
+	\centering
+	\caption{Mass of fish oil weighed out}
+	\hfill \\
+	\begin{tabular}{|c|c|}
+		\hline
+		Sample number & Mass (\si{\gram}) \\
+		\hline
+		1 & 1.1234 \\
+		\hline
+		2 & 0.9062 \\
+		\hline
+	\end{tabular}
+	\label{tab-fish}
+\end{table}
+
 
 \subsection{Discussion}
 
