--- a/labs/gc-ms/references.bib
+++ b/labs/gc-ms/references.bib
@@ -50,3 +50,14 @@
 	year = {2003},
 	pages = {394--400}
 }
+
+@article{rat,
+	author = {Erratico, Claudio A. and Moffatt, Sarah C. and Bandiera, Stelvio M.},
+	title = {Comparative Oxidative Metabolism of BDE-47 and BDE-99 by Rat Hepatic Microsomes},
+	journal = {Toxicological Sciences},
+	volume = {123},
+	number = {1},
+	pages = {37-47},
+	year = {2011},
+	doi = {10.1093/toxsci/kfr155}
+}
