made .ods file filled with data

--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -20,7 +20,7 @@
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\title{Analysis and Quantification of 2,2',4,4'-Tetrabromodiphenyl ether using Gas Chromatography Coupled with a Low-Resolution Mass Spectrometry \\ CHEM 4303 \\ Analytical Separations} % Title
+\title{Analysis and Quantification of 2,2',4,4'-Tetrabromodiphenyl Ether using Gas Chromatography Coupled with a Low-Resolution Mass Spectrometry \\ CHEM 4303 \\ Analytical Separations} % Title
 
 \author{Robby \textsc{Renz}} % Author name
 
@@ -60,8 +60,6 @@ Polybrominated diphenyl ethers (PBDEs) are a class of halogenated compounds that
 LRMS is commonly done with selected ion monitoring (SIM) \cite{bjorklund_mass_2003}. SIM increases the selectivity of mass spectrometry for analytes and reduces its response to everything else \cite{harris}. It does this by setting the mass spectrometer to detect just one or even a few m/z values \cite{harris}. One of the advantages of SIM is that the signal-to-noise ratio greatly increases as the mass spectrometer spends its entire analysis time measuring that particular ion, or a couple of ions \cite{harris}.
 
 Internal standards are used for a number of reasons, such as when sample loss is expected during the sample preparation step, or when the response of the quantity of sample detected differs at each analysis \cite{harris}. Essentially, an internal standard is a known quantity of a compound that differs from the analyte, and is added to the mixture containing the analyte to be detected \cite{harris}. 
-
-A splitless injection mode is used for trace analysis. 
 
 An injection mode of splitless rather than a split is used when attempting to analyze trace chemicals \cite{harris}. Furthermore, a splitless injection mode minimizes solvent tailing by opening the split vent after around \SI{1}{min} so that the any remaining sample in the injection port can be purged \cite{vitha_chromatography:_2017}.
 
@@ -152,7 +150,6 @@ Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the m
 \begin{itemize}
 	\item maybe talk about the difference between internal standards and standard additions?
 	\item maybe talk about LRMS?
-	\item maybe talk about why we use splitless mode of injection rather than a split or even a on-column injection?
 \end{itemize}
 
 %----------------------------------------------------------------------------------------
