--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -145,6 +145,39 @@ Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the m
 	\label{tab-fish}
 \end{table}
 
+\begin{table}[h!]
+	\centering
+	\caption{Table of data showing the volume and concentration of each analyte in the calibration solution}
+	\hfill \\
+	\begin{tabular}{|c|c|c|c|c|c|c|}
+		\cline{1-5}
+		Component      & Volume/\si{mL}   & Concentration(\si{\mu{}g/mL}) & Mass/\si{\mu{}g}      & Area    \\ \cline{1-5}
+		BDE-47         & 0.01             & 0.0952                        & \num{9.52e-04}        & 367089  \\ \cline{1-5}
+		PBB-77         & 0.01             & 0.0952                        & \num{9.52e-04}        & 230205  \\ \cline{1-5}
+		`2-\ce{HCH}    & 0.05             & 0.476                         & \num{2.38e-02}        & 260358  \\ \cline{1-5}
+	\end{tabular}
+	\label{tab-pre-rrf}
+\end{table}
+
+\begin{table}[h!]
+	\centering
+	\caption{Table of data showing the response and relative response factors of each analyte to the internal standard (PBB-77) in the calibration solution}
+	\hfill \\
+	\begin{tabular}{|c|c|c|c|c|c|c|}
+		\cline{1-5}
+		Component      & Mass/\si{\mu{}g}        & Area          & Response factor/\si{\mu{}u}       & Relative Response Factor       \\ \cline{1-5}
+		BDE-47         & \num{9.52e-04}          & 367089        & \num{2.59e-09}                    & \num{6.27e-01}                 \\ \cline{1-5}
+		PBB-77         & \num{9.52e-04}          & 230205        & \num{4.14e-09}                    & \num{1.00e+00}                 \\ \cline{1-5}
+		`2-\ce{HCH}    & \num{2.38e-02}          & 260358        & \num{9.14e-08}                    & \num{2.21e+01}                 \\ \cline{1-5}
+	\end{tabular}
+	\label{tab-rrf}
+\end{table}
+
+
+
+
+
+
 
 \subsection{Discussion}
 \begin{itemize}
