--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -91,7 +91,7 @@ In the last week of the experiment, a calibration solution was produced by addin
 \section{Results and Discussion}
 
 \subsection{Results}
-Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the molecular weight of BDE-47, PBB-77 and `2-\ce{HCH}. Table \ref{tab-fish} shows the mass of fish oil that was weighed out for the experiment.
+Table \ref{tab-para} shows the parameters that was set in the GC/EI-MS and the mass of the ions that was monitored.
 
 \begin{table}[h!]
 	\centering
@@ -111,6 +111,8 @@ Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the m
 	\label{tab-para}
 \end{table}
 
+Table \ref{tab-mass} tabulates the molecular weight of BDE-47, PBB-77, and `2-\ce{HCH}.
+
 \begin{table}[h!]
 	\centering
 	\caption{Molecular weight of BDE-47, PBB-77 and `2-HCH}
@@ -129,6 +131,8 @@ Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the m
 	\label{tab-mass}
 \end{table}
 
+Table \ref{tab-fish} shows mass of fish oil that was weighed out for this experiment.
+
 \begin{table}[h!]
 	\centering
 	\caption{Mass of fish oil weighed out}
@@ -144,6 +148,8 @@ Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the m
 	\end{tabular}
 	\label{tab-fish}
 \end{table}
+
+Table \ref{tab-pre-rrf} tabulates the volume, concentration and mass of BDE-47, PBB-77, and `2-\ce{HCH} that was added into the calibration solution, while table \ref{tab-rrf} shows the response and relative response factors of the aforementioned analytes to the internal standard, which was PBB-77, in the calibration solutions.
 
 \begin{table}[h!]
 	\centering
@@ -173,9 +179,36 @@ Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the m
 	\label{tab-rrf}
 \end{table}
 
+Table \ref{tab-mass-of-bde} shows how much mass of BDE-47 was contained in each sample of fish.
 
+\begin{table}[h!]
+	\centering
+	\caption{Table of data showing how much mass of BDE-47 is in each fish sample}
+	\hfill \\
+	\begin{tabular}{|c|c|c|c|}
+		\hline
+		Fish sample                & Area of BDE-47 & Area of PBB-77 & Mass of BDE-47 in sample/\si{\mu{}g}     \\ \cline{1-4}
+		1 (first run)              & 13799          & 100528         & \num{1.64e-05}                           \\ \cline{1-4}
+		1 (second run)             & 14383          & 103212         & \num{1.66e-05}                           \\ \cline{1-4}
+		2 (first run)              & 12800          & 112480         & \num{1.36e-05}                           \\ \cline{1-4}
+		2 (second run)             & 13938          & 100772         & \num{1.65e-05}                           \\ \cline{1-4}
+	\end{tabular}
+	\label{tab-mass-of-bde}
+\end{table}
 
+Table \ref{tab-areas} shows the mass of PBB-77 and `2-\ce{HCH} that was added to the calibration solution as well as areas of their respective peaks.
 
+\begin{table}[h!]
+	\centering
+	\caption{Mass of PBB-77 and `2-\ce{HCH} that was added to the calibration solution}
+	\hfill \\
+	\begin{tabular}{|c|c|}
+		\hline
+		Mass of PBB-77 /\si{\mu{}g} & Mass of ‘2-\ce{HCH}/\si{\mu{}g}  \\ \hline
+	    \num{1.90e-04}                   & \num{4.76e-03}                          \\ \hline
+	\end{tabular}
+	\label{tab-areas}
+\end{table}
 
 
 
@@ -227,7 +260,7 @@ Table \ref{tab-para} shows some cool stuff, and table \ref{tab-mass} shows the m
 
 
 \subsection{Chromatograms}
-There are ? sheets of GC-MS chromatograms.
+There are 23 figures of GC/EI chromatograms.
 
 %----------------------------------------------------------------------------------------
 
